refactor: 리뷰 내용 반영
- 객체내 필드 3개 이하로 구성
- LinkedList.getLast() 활용하도록 수정