@@ -1,12 +1,12 @@
 package step5.domain.result;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
 
 public class CarMovementRoundResults {
-    private final List<CarMovementRoundResult> results = new ArrayList<>();
+    private final LinkedList<CarMovementRoundResult> results = new LinkedList<>();
 
     public void add(CarMovementRoundResult roundResult) {
         results.add(roundResult);
@@ -20,6 +20,6 @@ public class CarMovementRoundResults {
         if (results.isEmpty()) {
             return Optional.empty();
         }
-        return Optional.of(results.get(results.size() - 1));
+        return Optional.of(results.getLast());
     }
 }
